first draft sent to Henry

--- a/ben-papers.bib
+++ b/ben-papers.bib
@@ -5239,6 +5239,16 @@ Written by two Zero Configuration Networking experts, including one of Apple's o
   date = {2006-01-01}
 }
 
+@article{Manyika2011,
+  title = {Big data: {The} next frontier for innovation, competition, and productivity},
+  url = {http://www.mckinsey.com/Insights/MGI/Research/Technology_and_Innovation/Big_data_The_next_frontier_for_innovation},
+  shorttitle = {Big data},
+  author = {Manyika, James and Chui, Michael and Brown, Brad and Bughin, Jacques and Dobbs, Richard and Roxburgh, Charles and Byers, Angela},
+  urldate = {2015-01-11},
+  date = {2011-05},
+  keywords = {big\_data,big\_data\_text\_sum,data\_mining}
+}
+
 @article{Lampson1973,
   title = {A note on the confinement problem},
   volume = {16},
@@ -23249,6 +23259,22 @@ The papers presented follow in the footsteps of a small but growing internationa
   date = {2009-01-01},
   pages = {473--484},
   file = {Proceedings of the SIAM International Conference on Data Mining (SDM) Sparks NV USA 2009 Mueen-1:/Users/ben/Documents/zotero/storage/I4ANAXDT/Proceedings of the SIAM International Conference on Data Mining (SDM) Sparks NV USA 2009 Mueen-1.pdf:application/pdf}
+}
+
+@report{!boyd2011,
+  location = {Rochester, {NY}},
+  title = {Six {Provocations} for {Big} {Data}},
+  url = {http://papers.ssrn.com/abstract=1926431},
+  abstract = {The era of Big Data has begun. Computer scientists, physicists, economists, mathematicians, political scientists, bio-informaticists, sociologists, and many others are clamoring for access to the massive quantities of information produced by and about people, things, and their interactions. Diverse groups argue about the potential benefits and costs of analyzing information from Twitter, Google, Verizon, 23andMe, Facebook, Wikipedia, and every space where large groups of people leave digital traces and deposit data. Significant questions emerge. Will large-scale analysis of DNA help cure diseases? Or will it usher in a new wave of medical inequality? Will data analytics help make people's access to information more efficient and effective? Or will it be used to track protesters in the streets of major cities? Will it transform how we study human communication and culture, or narrow the palette of research options and alter what `research' means? Some or all of the above?This essay offers six provocations that we hope can spark conversations about the issues of Big Data. Given the rise of Big Data as both a phenomenon and a methodological persuasion, we believe that it is time to start critically interrogating this phenomenon, its assumptions, and its biases.(This paper was presented at Oxford Internet Institute's ``A Decade in Internet Time: Symposium on the Dynamics of the Internet and Society'' on September 21, 2011.)},
+  type = {{SSRN} {Scholarly} {Paper}},
+  number = {ID 1926431},
+  institution = {Social {Science} {Research} {Network}},
+  type = {SSRN Scholarly Paper},
+  author = {\ensuremath{<}!\ensuremath{>}boyd, \ensuremath{<}!\ensuremath{>}danah and Crawford, Kate},
+  urldate = {2015-01-11},
+  date = {2011-09-21},
+  keywords = {analysis,Big Data,computer science,methodology,sociology},
+  file = {Snapshot:/Users/ben/Documents/zotero/storage/9DRRRDMQ/Papers.html:text/html}
 }
 
 @article{Collins2009b,
