--- a/dp-2016.bib
+++ b/dp-2016.bib
@@ -1,1 +1,9 @@
 @Comment copy and paste any bibtex entries in here
+
+
+@Article{bloggs-test,
+  author =       {Joe Bloggs},
+  title =        {A Test Article},
+  journal =      {A Test Journal},
+  year =         {2015},
+}
